merubah cover menjadi index.html

--- a/resumee.html
+++ b/resumee.html
@@ -20,9 +20,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark shadow " style="background-color: #2380b9">
 	<div class="container">
-		<a class="navbar-brand" href="coverr.html">MY PROFIL</a>
+		<a class="navbar-brand" href="index.html">MY PROFIL</a>
 	<div class="navbar-nav ml-auto">
-		<a href="coverr.html" class="nav-link active">home</a>
+		<a href="index.html" class="nav-link active">home</a>
 		
 		
 	</div>
